[package]
name = "pyne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["cargo"] }

# TLS related crates
rcgen = { version= "0.9" }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "net", "io-util"] }
rustls-pemfile = "1.0.3"
tokio-rustls = "0.24.1"
